fix(header-responsive): fix header on IE and old iOS versions

--- a/local/templates/individual/public/scss/reset.scss
+++ b/local/templates/individual/public/scss/reset.scss
@@ -8,8 +8,6 @@ body {
   color:#333;
   height: 100%;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   overflow-x: hidden;
 }
 * {
